[#7] Fix file list too low in upload page

--- a/src/app/upload/page.module.css
+++ b/src/app/upload/page.module.css
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    min-height: 80vh;
+    justify-content: flex-end;
+    /* Approx. Center the input area. */
+    min-height: calc(50vh - 56px + 125px);
     padding: 10px 80px;
     gap: 40px;
 }
